--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,18 @@
-[package]
-name = "granary"
+[workspace]
+members = ["crates/*"]
+resolver = "3"
+
+[workspace.package]
 version = "0.9.1"
 edition = "2024"
-description = "A CLI context hub for agentic work"
 license = "MIT"
+
+[package]
+name = "granary"
+version.workspace = true
+edition.workspace = true
+description = "A CLI context hub for agentic work"
+license.workspace = true
 
 [dependencies]
 # CLI
@@ -24,6 +33,9 @@ sqlx = { version = "0.8", features = [
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_yaml = "0.9"
+
+# Shared types
+granary-types = { path = "crates/granary-types", features = ["sqlx"] }
 
 # Error handling
 thiserror = "2"
