--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ version.workspace = true
 edition.workspace = true
 description = "A CLI context hub for agentic work"
 license.workspace = true
+build = "build.rs"
 
 [dependencies]
 # CLI
